Update .gitignore to keep README in raw data

--- a/.gitignore
+++ b/.gitignore
@@ -35,11 +35,10 @@ cache/
 *.docx
 *.pdf
 
-
 # Ignore all raw data (do not sync to GitHub)
 data/raw/*
 
-# But keep a placeholder README if needed
+# But keep a placeholder README 
 !data/raw/README.md
 
 
